--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # next.js
 /.next/
 /out/
-
+.idea
 # production
 /build
 
@@ -27,7 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
+.env.local
 # vercel
 .vercel
 
